--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "catslanderer <45492869+catslanderer@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.5",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
